# WEB_HW14

./: .env_example  .gitignore  README.md  auth.yaml  docker-compose.yaml  main.py  pyproject.toml
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 704a69d75d6c_alter_users.py  a9ea6f1896b6_add_users.py  afbdf247ba09_add_birthday.py  b0d2f5529960_e_mail_confirmation_for_user.py  f7879708250b_init.py
src/conf/: config.py  messages.py
src/database/: db.py  models.py  schemas.py
src/repository/: contacts.py  users.py
src/routes/: contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: email_confirmation.html  pwd_reset.html
tests/: conftest.py  test_func_main.py  test_func_users.py  test_unit_contacts.py  test_unit_users.py
